--- a/data_type_and_variables.py.ipynb
+++ b/data_type_and_variables.py.ipynb
@@ -289,7 +289,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "THE END"
+   ]
   },
   {
    "cell_type": "code",
