--- a/pandas_series.ipynb
+++ b/pandas_series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "34913eb9",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "id": "424084ec",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "ef60879c",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "fe896637",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "7a29f296",
    "metadata": {
     "scrolled": true
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "id": "088fd880",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "id": "365c6d47",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "id": "c89af8f1",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "id": "41fb40db",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "id": "d628be27",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "Series([], dtype: object)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "id": "1a52457e",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,19 +243,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "id": "eaf564d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3      pineapple\n",
-       "14    blackberry\n",
+       "9           kiwi\n",
+       "15    gooseberry\n",
        "dtype: object"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "id": "f2d0091b",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "id": "8172931f",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "id": "672fa5a4",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "id": "9367c159",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "id": "6a7cd2c2",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "id": "e62db8fd",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 21,
    "id": "fbff4d17",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 22,
    "id": "09d5f4f6",
    "metadata": {},
    "outputs": [
@@ -496,18 +496,49 @@
       "16    3\n",
       "dtype: int64\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0     0\n",
+       "1     0\n",
+       "2     0\n",
+       "3     0\n",
+       "4     0\n",
+       "5     0\n",
+       "6     0\n",
+       "7     0\n",
+       "8     0\n",
+       "9     0\n",
+       "10    0\n",
+       "11    0\n",
+       "12    0\n",
+       "13    0\n",
+       "14    0\n",
+       "15    0\n",
+       "16    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Output the number of vowels in each and every string value.\n",
     "vowels = 'aeoiu'\n",
     "fruits_vowels = fruits.str.count('['+ vowels +']')\n",
-    "print(fruits_vowels)"
+    "print(fruits_vowels)\n",
+    "\n",
+    "#Nikki's way\n",
+    "fruits.str.count('aeiou')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 23,
    "id": "b1ace062",
    "metadata": {},
    "outputs": [
@@ -517,7 +548,7 @@
        "16"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
    "id": "55a62879",
    "metadata": {},
    "outputs": [
@@ -556,7 +587,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 25,
    "id": "13780347",
    "metadata": {},
    "outputs": [
@@ -595,7 +626,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 26,
    "id": "69e5c764",
    "metadata": {},
    "outputs": [
@@ -634,7 +665,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 27,
    "id": "cadca2fc",
    "metadata": {},
    "outputs": [
@@ -673,7 +704,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 28,
    "id": "133c6a01",
    "metadata": {},
    "outputs": [
@@ -696,7 +727,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[110], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Which string value contains the most vowels?\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mfruits\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmax\u001b[49m([vowels])\n",
+      "Cell \u001b[0;32mIn[28], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Which string value contains the most vowels?\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mfruits\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmax\u001b[49m([vowels])\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'StringMethods' object has no attribute 'max'"
      ]
     }
