--- a/advanced_df_pt1.ipynb
+++ b/advanced_df_pt1.ipynb
@@ -183,7 +183,8 @@
    "outputs": [],
    "source": [
     "# now we have to call a text function\n",
-    "text_query = text(query)"
+    "text_query = text(query)\n",
+    "\n"
    ]
   },
   {
@@ -344,7 +345,7 @@
    ],
    "source": [
     "df = pd.read_sql(text_query, engine.connect())\n",
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
