made a newdir statistics-exercises

--- a/numpy-pandas-visualization-exercises/seaborn_exercises.ipynb
+++ b/numpy-pandas-visualization-exercises/seaborn_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "id": "2a9339dd",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "id": "71817009",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,17 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "a30c5cef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1462cea70>"
+       "<seaborn.axisgrid.PairGrid at 0x1568f1900>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "262612fa",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "       6.4, 6.6, 6.7, 6.9])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,17 +174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "id": "4760078a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x1520b6a70>"
+       "<seaborn.axisgrid.JointGrid at 0x15745e5c0>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "16c51205",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "6a7aeb3a",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "4       I  11.0  8.33"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "ee3d69eb",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
        "max    19.000000  12.740000"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "id": "50f9bc62",
    "metadata": {},
    "outputs": [
@@ -609,7 +609,7 @@
        "IV       2.030579  5.25  6.170  7.04  8.19  12.50  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "id": "28871bdd",
    "metadata": {},
    "outputs": [],
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "a59e340f",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -662,17 +662,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "id": "8a5a54bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x15227e020>"
+       "<seaborn.axisgrid.FacetGrid at 0x157a0f490>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -693,17 +693,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "id": "98477d77",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x15254b1c0>"
+       "<seaborn.axisgrid.FacetGrid at 0x157c035b0>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "id": "be8fe83e",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
        "5     14     A"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "id": "edf742d7",
    "metadata": {},
    "outputs": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "b69a0c84",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
        "Neuveville                20.6  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "id": "276065e0",
    "metadata": {
     "scrolled": true
@@ -1053,7 +1053,7 @@
        "Neuveville                20.6  Not Catholic  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "id": "fe60ed91",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "id": "c15abaf3",
    "metadata": {
     "scrolled": false
@@ -1136,10 +1136,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x15227ef50>"
+       "<seaborn.axisgrid.PairGrid at 0x157d97be0>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1168,10 +1168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e4fccdf3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'chipotle' is not one of the example datasets.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m chip \u001b[38;5;241m=\u001b[39m \u001b[43msns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mchipotle\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m chip\u001b[38;5;241m.\u001b[39mhead()\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/site-packages/seaborn/utils.py:587\u001b[0m, in \u001b[0;36mload_dataset\u001b[0;34m(name, cache, data_home, **kws)\u001b[0m\n\u001b[1;32m    585\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(cache_path):\n\u001b[1;32m    586\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m get_dataset_names():\n\u001b[0;32m--> 587\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is not one of the example datasets.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    588\u001b[0m     urlretrieve(url, cache_path)\n\u001b[1;32m    589\u001b[0m full_path \u001b[38;5;241m=\u001b[39m cache_path\n",
+      "\u001b[0;31mValueError\u001b[0m: 'chipotle' is not one of the example datasets."
+     ]
+    }
+   ],
    "source": [
     "chip = sns.load_dataset('chipotle')\n",
     "chip.head()"
