--- a/Probability_distributions.ipynb
+++ b/Probability_distributions.ipynb
@@ -26,17 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "id": "8d4fbc4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([11,  7,  3, 18, 17,  3,  2,  7,  9, 15])"
+       "array([18,  3,  3,  9, 19,  7,  4,  5, 19,  7])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 27,
    "id": "2e50a40e",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "id": "a11fd61c",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "e652d209",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "0.3233235838169366"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "5dcfa419",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "0.8646647167633873"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "a448d410",
    "metadata": {},
    "outputs": [],
@@ -358,16 +358,16 @@
      "output_type": "stream",
      "text": [
       "Random Probabilities:\n",
-      "[0.18 0.26 0.68 0.68 0.34 0.92 0.72 0.42 0.69 0.09 0.06 0.65 0.53 0.31\n",
-      " 0.44 0.71 0.8  0.59 0.31 0.41 0.8  0.02 0.21 0.53 0.35 0.34 0.59 0.25\n",
-      " 0.86 0.69 0.87 0.09 0.83 0.75 0.81 0.53 0.01 0.58 0.92 0.85 0.08 0.05\n",
-      " 0.54 0.45 0.79 0.37 0.81 0.06 0.49 0.19 0.42 0.49 0.29 0.06 0.75 0.2\n",
-      " 0.7  0.13 0.52 0.75 0.98 0.92 0.63 0.82 0.31 0.72 0.29 0.5  0.42 0.72\n",
-      " 0.79 0.52 0.1  0.29 0.52 0.21 0.36 0.82 0.65 0.98 0.46 0.87 0.25 0.74\n",
-      " 0.18 0.31 0.98 0.7  0.18 0.67 0.92 0.35 0.85 0.11 0.15 0.21 0.96 0.1\n",
-      " 0.16 0.39]\n",
+      "[0.82 0.74 0.04 0.82 0.89 0.42 0.3  0.19 0.88 0.91 0.31 0.07 0.85 0.53\n",
+      " 0.53 0.49 0.86 0.56 0.93 0.75 0.03 0.89 0.24 0.33 0.4  0.78 0.11 0.15\n",
+      " 0.54 0.33 0.17 0.68 0.96 0.3  0.61 0.53 0.87 0.66 0.37 0.42 0.14 0.14\n",
+      " 0.21 0.32 0.17 0.01 0.82 0.09 0.73 0.89 0.14 0.66 0.64 0.37 0.88 0.65\n",
+      " 0.99 0.14 0.51 0.62 0.27 0.58 0.31 0.74 0.49 0.84 0.45 0.58 0.32 0.87\n",
+      " 0.16 0.74 0.86 0.22 0.48 0.56 0.1  0.69 0.89 1.   0.19 0.52 0.93 0.76\n",
+      " 0.19 0.16 0.98 0.82 0.64 0.4  0.42 0.37 0.15 0.2  0.82 0.64 0.41 0.47\n",
+      " 0.59 0.91]\n",
       "\n",
-      "Expected Number of Correct Answers: 0.499\n"
+      "Expected Number of Correct Answers: 0.5209999999999999\n"
      ]
     }
    ],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 40,
    "id": "20718dcf",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "0.5471566423907612"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 41,
    "id": "d7204c5a",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "0.4528433576092388"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 42,
    "id": "5875c538",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
        "3.1381059608999973e-34"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 43,
    "id": "d197c62e",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
        "1.0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 44,
    "id": "672caf18",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "1.0"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,15 +532,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "d9a43f4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99.98192245515945"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the probability using CDF\n",
     "probability = 1 - stats.norm.cdf(z_score)\n",
     "# Convert probability to percentage\n",
-    "percentage = probability * 100"
+    "percentage = probability * 100\n",
+    "\n",
+    "percentage"
    ]
   },
   {
@@ -553,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 49,
    "id": "3584e25f",
    "metadata": {},
    "outputs": [
@@ -564,13 +577,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[68], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msqlalchemy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_engine, text\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Replace 'your_database_url' with the appropriate URL to connect to the employees database\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# For example: 'mysql://username:password@hostname:port/database_name'\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m database_url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmysql+pymysql://\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msomerville_2272\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00meGgbCb67lYBjLZspz7Tlm076EF0POa5q\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m@\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata\u001b[38;5;241m.\u001b[39mcodeup\u001b[38;5;241m.\u001b[39mcom\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:8888/employees\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Create a database engine to connect to the employees database\u001b[39;00m\n\u001b[1;32m      8\u001b[0m engine \u001b[38;5;241m=\u001b[39m create_engine(database_url) \n",
+      "Cell \u001b[0;32mIn[49], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msqlalchemy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_engine, text\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Replace 'your_database_url' with the appropriate URL to connect to the employees database\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# For example: 'mysql://username:password@hostname:port/database_name'\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m database_url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmysql+pymysql://\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msomerville_2272\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00meGgbCb67lYBjLZspz7Tlm076EF0POa5q\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m@\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata\u001b[38;5;241m.\u001b[39mcodeup\u001b[38;5;241m.\u001b[39mcom\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/employees\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Create a database engine to connect to the employees database\u001b[39;00m\n\u001b[1;32m      8\u001b[0m engine \u001b[38;5;241m=\u001b[39m create_engine(database_url) \n",
       "\u001b[0;31mNameError\u001b[0m: name 'somerville_2272' is not defined"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "###could not connect###\n",
     "from sqlalchemy import create_engine, text\n",
     "# Replace 'your_database_url' with the appropriate URL to connect to the employees database\n",
     "# For example: 'mysql://username:password@hostname:port/database_name'\n",
@@ -588,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 50,
    "id": "c172c9ce",
    "metadata": {},
    "outputs": [
@@ -599,7 +612,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[59], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Calculate the mean and standard deviation of the salaries\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m mean_salary \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msalary\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\n\u001b[1;32m      3\u001b[0m std_dev_salary \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msalary\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mstd()\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean salary of current employees: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmean_salary\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[50], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Calculate the mean and standard deviation of the salaries\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m mean_salary \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msalary\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\n\u001b[1;32m      3\u001b[0m std_dev_salary \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msalary\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mstd()\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean salary of current employees: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmean_salary\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
@@ -631,21 +644,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "8e0f77ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Percent of employees earning less than $60,000: 50.00%\n",
-      "Percent of employees earning more than $95,000: 0.02%\n",
-      "Percent of employees earning between $65,000 and $80,000: 28.58%\n",
-      "The top 5% of employees make over $76448.54\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Mean and standard deviation of salaries (replace with the actual values from your calculations)\n",
     "mean_salary = 60000\n",
