finished hypothensis exercises

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -19,11 +19,12 @@
    "id": "2988fe17",
    "metadata": {},
    "source": [
-    "Null hypothesis (H0): The network latency has not gone up since we switched internet service providers.\n",
+    "Null hypothesis (H0): The network latency has not have any difference since we switched internet service providers.\n",
+    "\n",
     "Alternative hypothesis (Ha): The network latency has gone up since we switched internet service providers.\n",
     "\n",
     "True Positive: Occurs when the network latency has indeed gone up since switching internet service providers, and the test correctly detects this increase in latency.\n",
-    "True Negative: Occurs when the network latency has not gone up since switching internet service providers, and the test correctly identifies that there is no increase in latency.\n",
+    "True Negative: Occurs when the network latency has not gone up since switching internet service providers, and the test correctly identifies that there is no increase in latency.No relationship, but we fail to reject\n",
     "\n",
     "Type I Error (False Positive): Occurs when the network latency has not gone up since switching internet service providers, but the test incorrectly detects an increase in latency and falsely concludes that the latency has increased.\n",
     "Type II Error (False Negative): Occurs when the network latency has gone up since switching internet service providers, but the test fails to detect this increase and incorrectly concludes that the latency has not increased."
